--- a/09-CSS-Positioning/homework/homework.css
+++ b/09-CSS-Positioning/homework/homework.css
@@ -36,3 +36,8 @@ archivo en cualquiera de estas carpetas, estás en el lugar equivocado.
 
 
 /* Ejercicio 6. */
+#ejercicioCinco{
+    display: flex;
+    flex-direction:row-reverse
+   
+}
