--- a/09-CSS-Positioning/homework/homework.css
+++ b/09-CSS-Positioning/homework/homework.css
@@ -7,37 +7,83 @@ archivo en cualquiera de estas carpetas, estás en el lugar equivocado.
 
 /* Arrancaremos este ejercicio por vos: */
 #ejercicioUno {
-
+display: block;
+text-align: center;
 }
 
 
 /* Ejercicio 2: Posicionar el header */
 
 /* Acá va tu código */
-
+#ejercicioDos {
+    display: none;
+}
 
 
 /* Ejercicio 3: */
 
 /* Acá va tu código */
-
+#ejercicioTres {
+    position: absolute;
+    top: 100px;
+    left: 200px;
+}
 
 
 /* Ejercicio 4: */
 
 /* Acá va tu código */
-
+#ejercicioCuatro {
+    position: fixed;
+    top: 0;
+    left: 0;
+    z-index: 10;
+}
 
 
 /* Ejercicio 5: */
 
 /* Acá va tu código */
-
+#ejercicioCinco {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
 
 
 /* Ejercicio 6. */
-#ejercicioCinco{
+#ejercicioCinco {
     display: flex;
-    flex-direction:row-reverse
-   
+    justify-content: space-between;
+    align-items: center;
+    flex-direction: row-reverse;
 }
+
+/* Ejercicio 7. */
+#ejercicioSiete {
+    display: flex;
+    align-items: center;
+    flex-direction: row-reverse;
+}
+/*#elementoCuatro {
+    position:static;
+    top: 296px;
+    left: 346px;
+}
+
+#elementoTres {
+    position: absolute;
+    top: 194px;
+    left: 200px;
+}
+#elementoDos {
+    position: absolute;
+    top: 92px;
+    left: 100px;
+}
+#elementoUno {
+    position: absolute;
+    top: 0px;
+    left: 0px;
+}*/
+/* se intentó hacer algunos cambios de forma manual, pero el resultado ha sido nefasto */
