hoy jueves 24 de marzo se hizo un pequeño avance

--- a/09-CSS-Positioning/homework/homework.css
+++ b/09-CSS-Positioning/homework/homework.css
@@ -87,3 +87,4 @@ text-align: center;
     left: 0px;
 }*/
 /* se intentó hacer algunos cambios de forma manual, pero el resultado ha sido nefasto */
+/*un nuevo comentario para ver los cambios xd*/
