--- a/08-HTML/homework/demo.css
+++ b/08-HTML/homework/demo.css
@@ -1,5 +1,5 @@
 h1{
-    color:  rgb(128, 128, 182)
+    color: rgb(86, 65, 226);
 }
 img{
     width: 400px;
@@ -7,9 +7,9 @@ img{
 #thirdDiv{
     height: 600px;
     width: 500px;
-    background-color: chocolate;
+    background-color: rgb(23, 102, 95);
     padding: 50px;
-    border: 5px solid rgb(0, 255, 72);
+    border: 5px solid black;
 }
 #spanId{
     font-size: 18px;
